[package]
name = "rust-api-demo-001"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.7"                                      # 웹 서버 / 라우팅

sqlx = { version = "0.8.6", features = [
    "runtime-tokio",            # Tokio 기반 비동기 실행 지원 (async/await)
    "runtime-tokio-native-tls", # Tokio + native-tls 기반 TLS/SSL 지원 (PostgreSQL SSL 연결용)
    "macros",                   # query!, query_as! 등 매크로 지원, 컴파일 타임 쿼리 검증 가능
    "postgres",                 # PostgreSQL 드라이버 활성화, PostgreSQL 데이터베이스와 연결 가능
    "uuid",                     # UUID 컬럼 타입 지원, Rust에서 uuid::Uuid로 매핑 가능
    "chrono",                   # 날짜/시간 컬럼 타입 지원, Rust에서 chrono::NaiveDateTime 등으로 매핑 가능
    "migrate",                  # SQL 마이그레이션 기능 활성화, `sqlx migrate run` 등 사용 가능
] }

serde = "1.0.228"      # Serialize / Deserialize 지원
serde_json = "1.0.145" # JSON 처리

dotenvy = "0.15.7" # .env 환경변수 로딩
anyhow = "1.0.100" # 에러 핸들링
